# wwe-rust-universe

./: .gitignore  Cargo.toml  README.md  app.db  diesel.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/2024-05-27-174227_create_users/: up.sql
migrations/2024-07-19-042259_create_users/: up.sql
migrations/2024-09-19-030952_create_users/: up.sql
migrations/2024-09-26-164633_create_wrestlers/: down.sql  up.sql
migrations/2024-09-26-164638_create_titles/: down.sql  up.sql
src/: app.css  app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  test_file.rs  user.rs
src-tauri/src/models/: mod.rs
src-tauri/tests/: common.rs  test_file.rs  title_tests.rs
src/lib/components/: ErrorAlert.svelte  LoginForm.svelte  Logo.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/register/: +page.svelte
