[package]
name = "wwe-rust-universe"
version = "0.0.5"
description = "WWE Universe App to log and track your Universe Mode"
authors = ["KiefBC"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = ["shell-open"] }
#dotenv = "0.15.0"
#dotenv_codegen = "0.15.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
serial_test = "3.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
